--- a/labs/comprehensive-review/deploy/openshift/resources/nexus-deployment.yaml
+++ b/labs/comprehensive-review/deploy/openshift/resources/nexus-deployment.yaml
@@ -44,7 +44,7 @@ items:
       spec:
         containers:
         - env: []
-          image: quay.io/$RHT_OCP4_QUAY_USER/nexus:latest
+          image: quay.io/xvr_mnts/nexus:latest
           imagePullPolicy: Always
           livenessProbe:
             failureThreshold: 10
